--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,20 @@ p {
     padding-bottom: 260px;
     background-color: var(--btn-color);
     padding-top: var(--section-padding);
+    background-image: url(../images/ebook-banner.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#books::after {
+    top: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(35, 65, 175, 0.9);
 }
 
 #books .books-title h2::after {
