--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,14 @@ p {
 
 /*============= banner part css ===============*/
 #banner {
-    padding: 150px 0;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-image: url(../images/banner.jpg);
+}
+
+#banner .banner-content {
+    padding: 150px 0;
 }
 
 /*============= what part css ===============*/
